# bitcraft-planner

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  nginx.conf
.cursor/rules/: project.mdc
api/: .env.example  DISCORD_OAUTH_SETUP.md  Dockerfile  Makefile  README.md  api.py  bitcraft.db.backup  database.py  entrypoint.sh  helpers.py  main.py  models.py  pyproject.toml  settings.py  stdb_helpers.py
api/alembic/: env.py
api/alembic/versions/: 2d4df08eecf7_adding_the_claim_orm.py  8e9f8a0bb19d_make_building_nickname_nullable.py  94ce75362c8f_initial_schema.py  d3c21d25a673_various_game_orm_changes.py
api/models/: crafting.py  gamedata.py  items.py  projects.py  users.py
api/routes/: auth.py  buildings.py  cargo.py  crafting.py  groups.py  guilds.py  items.py  projects.py  test.py
api/schemas/: crafting.py
api/tests/: README.md  conftest.py  test_crafting.py  test_groups.py  test_items_endpoints.py  test_search.py
api/tools/: item_tools.py
web/: .env.example  Dockerfile  FRONTEND_OAUTH_SETUP.md  Makefile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vitest.config.ts
web/berkeley-mono-web/: README.txt
web/src/: App.css  App.tsx  index.css
web/src/components/: add-to-project.tsx  group-invite-management.tsx  my-invites.tsx  project-item-ingredients.tsx  project-raw-materials.tsx  protected-route.tsx  recipe-tree-flow.tsx  search-dropdown.tsx  settings-menu.tsx  theme-provider.tsx  tier-tag.tsx  user-nav.tsx
web/src/hooks/: use-auth.tsx  use-polling.tsx  use-projects-polling.tsx  use-simple-data.tsx
web/src/lib/: api.ts  (+6 more)
(+21 files in other folders)
